[package]
name = "autogit"
version = "0.1.4"
edition = "2021"
license = "AGPL-3.0-only"
description = "An interactive CLI tool to automate operations on GitHub using its API"
keywords = ["cli", "git", "github", "api"]
repository = "https://github.com/costa86/autogit"
authors = ["Lorenzo Costa <http://www.costa86.tech>"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tabled = "0.8.0"
colored = "2.0.0"
