[package]
name = "autogit"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "An interactive CLI tool to automate operations on GitHub using its API"
keywords = ["cli", "git", "github", "api"]
repository = "https://github.com/costa86/autogit"
authors = ["Lorenzo Costa <http://www.costa86.tech>"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
open = "3.0.2"